<resources>

    <!-- App Settings -->
    <string name="app_name">DesmosCloneJavaFirst</string>


    <!-- SignUp Page -->
    <string name="SignUp">Sign up</string>   <!-- SignUp Page title -->


    <!--Login Page -->
    <string name="login">Sign in</string>
    <string name="function">enter your function here</string>
    <string name="title_activity_graphing_calculator">graphingCalculatorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="buttonSignUp">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="lastname">LastName</string>
    <string name="firstname">FirstName</string>
    <string name="forgot_password">forgot password?</string>
    <string name="register_a_new_user">Don\'t have an account? Sign up here</string>
    <string name="goToExplanationActivity">Go to an explanation page to understand what are polynomials</string>
    <string name="goToGraphingCalculatorActivity">Use our Graphing Calculator</string>
    <string name="main_activity">Main Activity</string>
    <string name="polynomialFunctionsExplanationTitle">What are Polynomial Functions?</string>

    <string name="polynomialFunctionsExplanation">
       A polynomial function is a mathematical expression made up of variables and constants, \n
        where the variables are raised to non-negative integer powers and combined using addition and multiplication. \n
        It\'s like an algebraic recipe that takes a number as input, performs various arithmetic operations on it, and gives you another number as output. \n
        For instance, (f(x) = 3x^2 - 2x + 5) is a simple polynomial function where x is the input variable, and the function computes a value based on the input by squaring it
        ,multiplying it by 3, subtracting twice the value of  x, and adding 5.


    </string>
    <string name="tts">TTS</string>
    <string name="stop_tts_button">stop tts</string>
    <string name="select_time">Select\nTime</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="sign_out">sign out</string>


</resources>