<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/background1">


    <!-- Page Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/SignUp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:background="@drawable/purple_border"
        android:padding="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/purple_border"
        android:orientation="vertical"
        android:padding="20dp"
        >


        <!-- Enter first name -->
        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background"
            android:hint="@string/firstname"
            android:inputType="text"
            android:padding="10dp" />

        <!-- Enter last name -->
        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background"
            android:hint="@string/lastname"
            android:inputType="text"
            android:padding="10dp" />

        <!-- Enter username -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp" />

        <!-- Enter email -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <!-- Enter Password (First) -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <!-- Enter Password (Second) -->
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <!-- SignUp Button -->
        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:minHeight="48dp"
            android:layout_gravity="center"

            android:text="@string/buttonSignUp" />

    </LinearLayout>

</LinearLayout>

