<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ExplanationForPolynomialFunctionsActivity"
    android:background="@drawable/transition1">


    <TextView
        android:id="@+id/explanationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/polynomialFunctionsExplanationTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        tools:layout_editor_absoluteX="-16dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">


    </LinearLayout>

    <!-- TTS button -->
    <TextView
        android:id="@+id/explanationPart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:text="@string/polynomialFunctionsExplanation"

        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanationTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonGenerateExplanationTTS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tts"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanationPart1" />

    <Button
        android:id="@+id/stop_tts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_tts_button"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>