<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transition1"
    tools:context=".activities.MainActivity"
    android:id="@+id/mainActivityLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_activity"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="100sp">

            <!-- ImageView for profile picture -->

            <ImageView
                android:id="@+id/imageProfilePicView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:focusable="true"
                android:paddingBottom="10dp"
                android:src="@drawable/default_profile_picture" />

            <Button
                android:id="@+id/buttonGoToExplanationsActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20sp"
                android:text="@string/goToExplanationActivity"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonGoToGraphingCalculatorActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goToGraphingCalculatorActivity"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>



